--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "ASI-API-Platform",
   "version": "1.0.0",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
-    "mongodb": "^4.5.0"
+    "express": "^4.17.3",
+    "mongodb": "^4.5.0",
+    "mongoose": "^6.2.10"
   }
 }
