--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "express": "^4.17.3",
     "mongodb": "^4.5.0",
     "mongoose": "^6.2.10"
+  },
+  "scripts": {
+    "start": "node src/index.js"
   }
 }
