--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "asi_api_platform",
   "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node src/index.js",
+    "swagger-docs": "node swagger.js"
+  },
   "dependencies": {
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongodb": "^4.5.0",
-    "mongoose": "^6.2.10"
+    "mongoose": "^6.2.10",
+    "swagger-autogen": "^2.20.8",
+    "swagger-ui-express": "^4.1.4",
+    "swagger-jsdoc": "^6.2.0"
   }
 }
