--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "express": "^4.17.3",
     "mongodb": "^4.5.0",
     "mongoose": "^6.2.10",
+    "npmlog": "^6.0.1",
     "swagger-autogen": "^2.20.8",
-    "swagger-ui-express": "^4.1.4",
-    "swagger-jsdoc": "^6.2.0"
+    "swagger-jsdoc": "^6.2.0",
+    "swagger-ui-express": "^4.1.4"
   }
 }
