--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "asi_api_platform",
   "version": "1.0.0",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
