--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
+    "eslint": "^8.13.0",
     "express": "^4.17.3",
     "mongodb": "^4.5.0",
     "mongoose": "^6.2.10"
   },
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "lint": "eslint src"
   }
 }
