--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "asi_api_platform",
+  "name": "skill-tree-api",
   "version": "1.0.0",
   "dependencies": {
     "bcryptjs": "^2.4.3",
