--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "eslint": "^8.13.0",
-    "express": "^4.17.3",
+    "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
+    "express-jwt": "^7.7.5",
+    "express-openid-connect": "^2.7.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.5.0",
     "mongoose": "^6.2.10",
     "npmlog": "^6.0.1",
