* Updated the jsdocs so that swagger shows the updated models.
* Still need to work on the parameters as inputs and example outputs for each endpoint.

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,4 +1,4 @@
-API_KEY= API KEY HERE 
-PORT= 8080
-DB_KEY= DATABASE KEY
-ENVIRONMENT_TYPE = "development" or "production"
+API_KEY=API_KEY_HERE
+PORT=8080
+DB_KEY=DATABASE_KEY
+ENVIRONMENT_TYPE="development"
