--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,8 @@ API_KEY=123
 # port to run HTTP server on
 PORT=8080
 
+# port to run Swagger on
+SWAGGER_PORT=
+
 # development/production
-ENVIRONMENT_TYPE=development
+NODE_ENV=development
