--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.5.0",
     "mongoose": "^6.2.10",
+    "morgan": "^1.10.0",
     "npmlog": "^6.0.1",
     "swagger": "^0.0.1",
     "swagger-autogen": "^2.21.1",
