--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "skill-tree-api",
   "version": "1.0.0",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
